WIP - orderbook change

--- a/Pipfile
+++ b/Pipfile
@@ -15,7 +15,7 @@ pyyaml = "*"
 aiohttp = ">=3.6.2"
 pandas = "*"
 requests = ">=2.18.4"
-sortedcontainers = ">=1.5.9"
+orderbook = ">=0.2.0"
 websockets = ">=7.0"
 uvloop = {version = "*", sys_platform = "!= 'windows'"}
 "yapic.json" = ">=1.4.3"    # fast, drop-in replacement of the built-in python.json
